Update java versions (#12949)
Motivation:

We used old java versions when compiling on the CI.

Modifications:

- Update all versions to latest release
- Replace Java18 with Java19 usage as its the latest LTS
- Fix a few cases where variadic methods and generic target typing were interacting poorly.

Result:

Use latest java versions on the CI

Co-authored-by: Chris Vest <christianvest_hansen@apple.com>